feat: 实现动态对话模型与记忆系统增强
- 新增 DynamicChatModel 实现动态切换 Ollama/OpenAI 模型
- 重构 DatabaseChatMemoryStore 支持持久化对话历史
- 添加 McpService 及相关实体类实现插件管理
- 优化前端设置页面增加 MCP 插件管理功能
- 增强 LocalTools 工具调用安全性与跨平台支持
- 更新系统文档反映记忆架构变更
- 修复前端聊天视图自动滚动问题
- 新增 SystemLogService.thinking 方法记录思考过程